Fix Portfolio view's head getting cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -699,7 +699,7 @@ section {
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio {
-  padding: 60px 0;
+  padding: 100px 0;
 }
 
 .portfolio #portfolio-flters {
